--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@ body,
   min-height: 100%;
   max-width: 100vw;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 :root {
   --swiper-navigation-color: #fff;
