--- a/app/globals.css
+++ b/app/globals.css
@@ -94,6 +94,39 @@ body,
   opacity: 1;
 }
 
+/* animation loading_state */
+.loading_state {
+  -webkit-animation: loading_state 1s cubic-bezier(0.215, 0.61, 0.355, 1)
+    infinite alternate both;
+  animation: loading_state 1s cubic-bezier(0.215, 0.61, 0.355, 1) infinite
+    alternate both;
+}
+
+@-webkit-keyframes loading_state {
+  0% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+@keyframes loading_state {
+  0% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
 /* Mobile */
 @media (max-width: 800px) {
   .myswiper .swiper-button-prev {
